--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@
                         style="max-width: 940px;">Home</a><a href="index.html"
                         class="nav-link move-down hide-on-tab w-nav-link" style="max-width: 940px;">Home</a></div>
                 <div class="nav-link-wrapper"><a href="/about.html" class="nav-link w-nav-link"
-                        style="max-width: 940px;">About</a><a href="/about.html" class="nav-link move-down hide-on-tab w-nav-link"
-                        style="max-width: 940px;">About</a></div>
+                        style="max-width: 940px;">About</a><a href="/about.html"
+                        class="nav-link move-down hide-on-tab w-nav-link" style="max-width: 940px;">About</a></div>
                 <div class="nav-link-wrapper"><a href="/service.html" class="nav-link w-nav-link"
                         style="max-width: 940px;">services</a><a href="/service.html"
                         class="nav-link move-down hide-on-tab w-nav-link" style="max-width: 940px;">services</a></div>
@@ -92,9 +92,27 @@
                     <div>Oops! Something went wrong while submitting the form.</div>
                 </div>
             </div>
-            <div class="space-7rem"></div>
+            <div class="space-4rem"></div>
         </div>
     </section>
+    <section class="section">
+        <div class="w-layout-blockcontainer container w-container">
+            <h1 data-w-id="2b428689-5a35-99ff-f397-e68c91393ae6" style="text-align: center;"
+                style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+                Our Location</h1>
+            <div class="map-container">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d497511.23105453793!2d79.8789888821512!3d13.047985948738418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5265ea4f7d3361%3A0x6e61a70b6863d433!2sChennai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1742675442751!5m2!1sen!2sin"
+                    width="90%" height="400" style="border:0; margin-inline: 5%;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <!-- <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d497698.7749065775!2d77.3012550997965!3d12.95445954259468!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1670c9b44e6d%3A0xf8dfc3e8517e4fe0!2sBengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1742674888080!5m2!1sen!2sin"
+                    width="90%" height="400" style="border:0; margin-inline: 5%;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe> //Bangalore-->
+            </div>
+        </div>
+    </section>
+
     <div class="space-7rem"></div>
     <section class="section background-primary">
         <div class="w-layout-blockcontainer container padding-4-5rem w-container">
@@ -136,10 +154,10 @@
                         <div class="footer-link-wrapper"><a href="index.html" aria-current="page"
                                 class="footer-link w--current">Home</a><a href="index.html" aria-current="page"
                                 class="footer-link move-down w--current">Home</a></div>
-                        <div class="footer-link-wrapper"><a href="/about.html" class="footer-link">About</a><a href="/about.html"
-                                class="footer-link move-down">About</a></div>
-                        <div class="footer-link-wrapper"><a href="/service.html" class="footer-link">Services</a><a href="/service.html"
-                                class="footer-link move-down">Services</a></div>
+                        <div class="footer-link-wrapper"><a href="/about.html" class="footer-link">About</a><a
+                                href="/about.html" class="footer-link move-down">About</a></div>
+                        <div class="footer-link-wrapper"><a href="/service.html" class="footer-link">Services</a><a
+                                href="/service.html" class="footer-link move-down">Services</a></div>
                         <!-- <div class="footer-link-wrapper"><a href="/blog" class="footer-link">Blog</a><a href="/blog"
                                 class="footer-link move-down">Blog</a></div> -->
                     </div>
