--- a/termsCondition.html
+++ b/termsCondition.html
@@ -199,13 +199,13 @@
                 <div class="footer-flex">
                     <!-- <div class="footer-flex-bottom">
                         <p>Powered By&nbsp;</p><a href="https://menbotechnologies.in/" target="_blank" class="w-inline-block">
-                            <p class="footer-bottom-text">Menbo Technologies</p>
+                            <p class="footer-bottom-text"><b>Menbo Technologies</b></p>
                         </a>
                     </div> -->
                     <div class="footer-flex-bottom">
                         <p>Designed & Developed By&nbsp; </p><a href="https://menbotechnologies.in/" target="_blank"
                             class="w-inline-block">
-                            <p class="footer-bottom-text">Menbo Technologies</p>
+                            <p class="footer-bottom-text"><b>Menbo Technologies</b></p>
                         </a>
                     </div>
                 </div>
